k8s/manifests/apps/linkding/linkding.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  labels:
    gateway.infra.services/allow-routes: "true"
    pod-security.kubernetes.io/enforce: restricted
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.47.0-plus
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 200Mi
            limits:
              memory: 300Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: tmp
          emptyDir:
            sizeLimit: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
      appProtocol: http
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: links
  labels:
    external-dns: "true"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Links
    gethomepage.dev/icon: linkding
    gethomepage.dev/group: Apps
    gethomepage.dev/pod-selector: app.kubernetes.io/name=linkding
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: []
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: linkding
          port: 80
